[gd_scene load_steps=15 format=3 uid="uid://c2upj28cvv3rt"]

[ext_resource type="Script" path="res://scripts/paddle.gd" id="1_23fhm"]
[ext_resource type="Script" path="res://scripts/main.gd" id="1_mnrjk"]
[ext_resource type="Texture2D" uid="uid://cfb3vnjgagc4e" path="res://assets/images/breakout_pieces.png" id="1_x1333"]
[ext_resource type="Script" path="res://scripts/ball.gd" id="3_h1npo"]
[ext_resource type="Texture2D" uid="uid://6p07e7m61ik7" path="res://assets/images/ball.png" id="3_nvro0"]
[ext_resource type="PackedScene" uid="uid://dkd1ofb7rcnp" path="res://scenes/brick/brick.tscn" id="5_rc3j6"]
[ext_resource type="LabelSettings" uid="uid://qe6xeh1fkce2" path="res://assets/tres/NotoS_60_white.tres" id="7_tascb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1ky5n"]
size = Vector2(40, 608)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8ymhx"]
size = Vector2(1152, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_7vpuv"]
atlas = ExtResource("1_x1333")
region = Rect2(8, 8, 32, 16)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3aufr"]
radius = 12.0
height = 96.0

[sub_resource type="CircleShape2D" id="CircleShape2D_wrf1s"]
radius = 12.0416

[sub_resource type="LabelSettings" id="LabelSettings_q3m2d"]
font_size = 50

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a0nw5"]
size = Vector2(1322, 90.5)

[node name="Main" type="Node2D"]
script = ExtResource("1_mnrjk")
brick_scene = ExtResource("5_rc3j6")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 647.0
color = Color(0.463068, 0.463068, 0.463068, 1)

[node name="Wall" type="StaticBody2D" parent="."]
position = Vector2(20, 364)

[node name="LeftSide" type="ColorRect" parent="Wall"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -324.0
offset_right = 20.0
offset_bottom = 284.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1.01075e-06, 0.323, 0.324342, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall"]
position = Vector2(0, -20)
shape = SubResource("RectangleShape2D_1ky5n")

[node name="RightSide" type="ColorRect" parent="Wall"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1092.0
offset_top = -324.0
offset_right = 1132.0
offset_bottom = 284.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.321569, 0.32549, 1)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Wall"]
position = Vector2(1112, -20)
shape = SubResource("RectangleShape2D_1ky5n")

[node name="Ceiling" type="StaticBody2D" parent="."]

[node name="LeftSide" type="ColorRect" parent="Ceiling"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 1152.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1.01075e-06, 0.323, 0.324342, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ceiling"]
position = Vector2(576, 20)
shape = SubResource("RectangleShape2D_8ymhx")

[node name="Paddle" type="StaticBody2D" parent="." groups=["paddle_group"]]
position = Vector2(564, 586)
script = ExtResource("1_23fhm")

[node name="Sprite2D" type="Sprite2D" parent="Paddle"]
texture_filter = 1
scale = Vector2(3, 1.5)
texture = SubResource("AtlasTexture_7vpuv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Paddle"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_3aufr")

[node name="Ball" type="CharacterBody2D" parent="." groups=["ball_group"]]
position = Vector2(506, 510)
script = ExtResource("3_h1npo")

[node name="Sprite2D" type="Sprite2D" parent="Ball"]
texture_filter = 1
texture = ExtResource("3_nvro0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource("CircleShape2D_wrf1s")

[node name="Hud" type="CanvasLayer" parent="."]

[node name="HeartGrid" type="GridContainer" parent="Hud"]
layout_direction = 2
offset_right = 200.0
offset_bottom = 40.0
theme_override_constants/h_separation = 15
columns = 6

[node name="ScoreLabel" type="Label" parent="Hud"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -190.0
offset_bottom = 69.0
grow_horizontal = 0
text = "Score: 0"
label_settings = SubResource("LabelSettings_q3m2d")

[node name="HBCount" type="HBoxContainer" parent="Hud"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="MCCount" type="MarginContainer" parent="Hud/HBCount"]
layout_mode = 2
size_flags_horizontal = 6

[node name="ReadyLabel" type="Label" parent="Hud/HBCount/MCCount"]
layout_mode = 2
text = "3"
label_settings = ExtResource("7_tascb")

[node name="MCReminder" type="MarginContainer" parent="Hud"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -44.0
offset_right = 120.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverLabel" type="Label" parent="Hud/MCReminder"]
visible = false
layout_mode = 2
text = "遊戲結束"
label_settings = ExtResource("7_tascb")

[node name="DiedArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DiedArea"]
position = Vector2(582, 722.75)
shape = SubResource("RectangleShape2D_a0nw5")

[node name="ReadyTimer" type="Timer" parent="."]

[connection signal="body_entered" from="DiedArea" to="." method="_on_died_area_body_entered"]
[connection signal="timeout" from="ReadyTimer" to="." method="_on_ready_timer_timeout"]
